--- a/app/src/main/res/layout/activity_det_wayang.xml
+++ b/app/src/main/res/layout/activity_det_wayang.xml
@@ -24,13 +24,17 @@
             android:id="@+id/tvNama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="32sp"/>
+            android:textSize="32sp"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/tvDetail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="32sp"/>
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"/>
 
     </LinearLayout>
 
